Collection API Улучшения[#205320] Заменил остальные фабричные методы на List.of