@@ -23,7 +23,7 @@ public class StartUI {
     public static void main(String[] args) {
         Input input = new ValidateInput(new ConsoleInput());
         Tracker tracker = new Tracker();
-        new StartUI(input, tracker, System.out::println).init(Arrays.asList(
+        new StartUI(input, tracker, System.out::println).init(List.of(
                 new CreateAction(),
                 new ShowAllAction(),
                 new EditAction(),
