@@ -11,32 +11,32 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenMissed2() {
-        List<String> input = Arrays.asList("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK2", "K1/SK1/SSK1", "K2", "K2/SK1", "K2/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1");
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK2", "K1/SK1/SSK1", "K2", "K2/SK1", "K2/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAsc() {
-        List<String> input = Arrays.asList("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1", "K1/SK2");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1", "K1/SK2");
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -44,8 +44,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1", "K1", "K1/SK1", "K1/SK1/SSK2", "K1/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK2", "K1/SK1/SSK1", "K2/SK1/SSK1");
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K1", "K1/SK1", "K1/SK1/SSK2", "K1/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
