@@ -19,14 +19,14 @@ public class CalculatorTest {
                 (value, index) -> (double) value + index,
                 buffer::add
         );
-        assertThat(buffer, is(Arrays.asList(1D, 2D, 3D)));
+        assertThat(buffer, is(List.of(1D, 2D, 3D)));
     }
 
     @Test
     public void whenLinearFunctionThenLinearResults() {
         Calculator calc = new Calculator();
         List<Double> result = calc.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
@@ -34,7 +34,7 @@ public class CalculatorTest {
     public void whenQuadraticThenQuadraticResults() {
         Calculator calc = new Calculator();
         List<Double> result = calc.diapason(1, 4, x -> Math.pow(x, 2));
-        List<Double> expected = Arrays.asList(1D, 4D, 9D);
+        List<Double> expected = List.of(1D, 4D, 9D);
         assertThat(result, is(expected));
     }
 
@@ -42,7 +42,7 @@ public class CalculatorTest {
     public void whenLogarithmicThenLogarithmicResults() {
         Calculator calc = new Calculator();
         List<Double> result = calc.diapason(4, 7, x -> (double) Math.round(Math.log(x) / Math.log(2)));
-        List<Double> expected = Arrays.asList(2D, 2D, 3D);
+        List<Double> expected = List.of(2D, 2D, 3D);
         assertThat(result, is(expected));
     }
 }
